--- a/stylesheet.css
+++ b/stylesheet.css
@@ -20,60 +20,150 @@ header {
     background: #fff;
     border-bottom: 1px solid #e8e8e8;
     min-width: 0;
-    padding-bottom: 8px;
-    padding-top: 7px;
-    padding-left: 30px;
-    padding-right: 30px;
-    line-height: 30px;
+
+    height: 50px;
     display: block;
     width: 100%;
+
 }
 
 .nav-left {
     display: inline-block;
-}
+    margin-left: 50px;
+    vertical-align: middle;
 
-i {
-    display: inline-block;
+margin-top: -16px;
 }
 
 .fa-bars {
+    display: inline-block;
     color: #aaa;
-    vertical-align: middle;
-    padding: 0 10px 0 10px;
+    float: left;
+    /*border: 1px solid black;*/
 }
+
+
 
 .logo {
     display: inline-block;
-    vertical-align: middle;
+    float: left;
+padding-left: 10px;
+
+margin-top: -6px;
+    /*border: 1px solid black;*/
+
 }
 
 form {
     display: inline-block;
-    margin: 0;
-    line-height: 30px;
+    margin-top: 10px;
+
+
+
+
 }
 
 input[type=text] {
     width: 582px;
     margin: 0 0 0 90px;
     font-size: 14px;
-    height: 29px;
-    line-height: 30px;
+    line-height: 28px;
+    z-index: 2;
+
+
+        float: left;
 
 }
 
 button {
-    height: 30px;
-    width: 50px;
+  line-height: 31px;
+    width: 60px;
     background-color: #f0f0f0;
-    font-family: fontawesome;
-    font-size: 8px;
+    font-size: 14px;
     color: #aaa;
-    margin: 0 0 0 0;
-    padding: 0;
     display: inline-block;
     vertical-align: middle;
     border: none;
+    float: left;
+    border: 0.1px solid #ccc;
 
+    z-index: 1;
+
+
+}
+
+.fa-search {
+
+padding: 0 18px 0 18px;
+
+
+}
+
+.nav-right {
+
+display: inline-block;
+vertical-align: middle;
+float: right;
+margin: 10px 20px;
+color: #333;
+
+
+
+
+
+}
+
+.signin {
+  background-color: #4285f4;
+  color: white;
+  margin: 0 20px;
+
+  font-size: 11px;
+}
+
+.upload {
+
+  color: #333;
+  border-color: #d3d3d3;
+  background: #f8f8f8;
+  font-size: 11px;
+}
+
+.container {
+margin-left: auto;
+margin-right: auto;
+
+
+display: block;
+height: 1200px;
+max-width: 1350px;
+  }
+
+
+
+  main {
+
+
+  max-width: 860px;
+  margin-top: 10px;
+  display: inline-block;
+  float: left;
+}
+
+article {
+  background-color: white;
+  margin-top: 10px;
+  min-height: 150px;
+
+}
+
+aside {
+
+  width: 450px;
+  background-color: white;
+  display: inline-block;
+  margin-top: 10px;
+  float: left;
+  height: 1000px;
+  margin-left: 10px;
 }
